[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"
itertools = "0.12"
num-traits = "0.2"
roots = "0.0.8"

[profile.dev]
debug = true

[profile.release]
debug = true